--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
                 <p class="b3">Satisfaction Rate</p>
                 </div>
             </div>
-
         </section>
+        <section class="part5">
+            <div class="p5d1">
+                <h1>Ready to focus better</h1>
+                <p class="b3">This template instantly leveled up our presence.” – Studio Vertex</p>
+                <button class="btn-primary">Ger Started Free</button>
+            </div>
+            <img class="wc-big" src="Assets/wc-big.png" alt="">
+        </section>
+        
     </main>
     <footer>
         <div class="av">
