--- a/index.html
+++ b/index.html
@@ -51,6 +51,61 @@
                 </div>
             </div>
         </section>
+          <section class="part4">
+            <div>
+                <h1>What our users say</h1>
+                <div class="Reviewer-container">
+                    <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <h2 class="desiner">Loved by Designers</h2>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="R-img">
+                    <img src="Assets/avatar.png" alt="">
+                    <div class="b3">
+                    <h4>Reviewer name</h4>
+                    <p>Date</p>
+                  </div>
+                  </div>
+                  </div>
+                  <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <h2  class="desiner">Loved by Designers</h2>
+                        <p class="b3">This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="R-img">
+                    <img src="Assets/avatar.png" alt="">
+                    <div class="b3">
+                    <h4>Reviewer name</h4>
+                    <p>Date</p>
+                  </div>
+                  </div>    
+                  </div>
+                  <div>
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <img src="Assets/icon-star.png" alt="">
+                        <h2 class="desiner">Loved by Designers</h2>
+                        <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+                    <div class="R-img">
+                    <img src="Assets/avatar.png" alt="">
+                    <div class="b3">
+                    <h4>Reviewer name</h4>
+                    <p>Date</p>
+                  </div>
+                  </div>
+                  </div>                            
+                </div>
+           </div>
+        </section>
         <section class="part5">
             <div class="p5d1">
                 <h1>Ready to focus better</h1>
@@ -59,16 +114,15 @@
             </div>
             <img class="wc-big" src="Assets/wc-big.png" alt="">
         </section>
-        
+      
     </main>
     <footer>
-        <div class="av">
-            <img src="Assets/icon-star.pnggit init" alt="">
-            <div class="x">
-                <h4>Reviewer</h4>
-                <p>Date</p>
-            </div>
-        </div>
+        <div class="R-img">
+                    <img src="Assets/avatar.png" alt="">
+                    <div class="x">
+                     <h4>Reviewer</h4>
+                    <p>Date</p>
+              </div>
     </footer>
 </body>
 </html>
