change css file name again

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assainment</title>
-     <link rel="stylesheet" href="./Assainment.css">
+     <link rel="stylesheet" href="./assainment.css">
     <link rel="icon" type="image/x-icon" href="assignment.png">
     
 </head>
