add footer section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="btn-primary">Launch Live Preview</button>
             </div>
             <div class="action-img">
-                <img src="Assets/wc-mini.png" alt="">
+                <img src="as/wc-mini.png" alt="">
             </div>
         </div>
         <section class="part3">
